; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_client_retain_locked.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp_client.c_necp_client_retain_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.necp_client = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.necp_client*)* @necp_client_retain_locked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @necp_client_retain_locked(%struct.necp_client* %0) #0 {
  %2 = alloca %struct.necp_client*, align 8
  store %struct.necp_client* %0, %struct.necp_client** %2, align 8
  %3 = load %struct.necp_client*, %struct.necp_client** %2, align 8
  %4 = call i32 @NECP_CLIENT_ASSERT_LOCKED(%struct.necp_client* %3)
  %5 = load %struct.necp_client*, %struct.necp_client** %2, align 8
  %6 = getelementptr inbounds %struct.necp_client, %struct.necp_client* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = add nsw i64 %7, 1
  store i64 %8, i64* %6, align 8
  %9 = load %struct.necp_client*, %struct.necp_client** %2, align 8
  %10 = getelementptr inbounds %struct.necp_client, %struct.necp_client* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @ASSERT(i32 %13)
  ret void
}

declare dso_local i32 @NECP_CLIENT_ASSERT_LOCKED(%struct.necp_client*) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
